--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "bentoml>=1.3.13",
     "click>=8.1.7",
     "comfy-cli>=1.2.8",
+    "git+https://github.com/comfyanonymous/ComfyUI.git",
 ]
 dynamic = ["version"]
 
@@ -23,8 +24,18 @@ classifiers = [
 [project.urls]
 Homepage = "https://github.com/bentoml/comfy-pack"
 
+[project.optional-dependencies]
+litserve = [
+    "litserve @ git+https://github.com/Lightning-AI/LitServe.git",
+    "typer>=0.9.0",
+    "pydantic>=2.0.0",
+    "pydantic-settings>=2.0.0",
+    "rich>=13.0.0",
+]
+
 [project.scripts]
 comfy-pack = "comfy_pack.cli:main"
+comfy-litserve = "comfy_pack.litserve.cli:main"
 
 [build-system]
 requires = ["pdm-backend"]
